--- a/PhotoMemo/Storyboard/Base.lproj/Main.storyboard
+++ b/PhotoMemo/Storyboard/Base.lproj/Main.storyboard
@@ -84,11 +84,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <activityIndicatorView opaque="NO" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="kpZ-No-GpF">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </activityIndicatorView>
                             <view contentMode="scaleToFill" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="H4U-VN-PTC" userLabel="KeyBoardRegion">
                                 <rect key="frame" x="0.0" y="862" width="414" height="0.0"/>
                                 <constraints>
@@ -143,6 +138,11 @@
                                 <viewLayoutGuide key="contentLayoutGuide" id="RJ8-qK-75f"/>
                                 <viewLayoutGuide key="frameLayoutGuide" id="Q1w-Ho-KLF"/>
                             </scrollView>
+                            <activityIndicatorView opaque="NO" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" animating="YES" style="whiteLarge" translatesAutoresizingMaskIntoConstraints="NO" id="kpZ-No-GpF">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </activityIndicatorView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="O9J-x7-JZR"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -155,11 +155,6 @@
                             <constraint firstItem="UaV-PX-7Al" firstAttribute="top" secondItem="O9J-x7-JZR" secondAttribute="top" id="ad1-v9-Reb"/>
                             <constraint firstItem="H4U-VN-PTC" firstAttribute="trailing" secondItem="O9J-x7-JZR" secondAttribute="trailing" id="iKD-4s-Hhm"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="kpZ-No-GpF"/>
-                            </mask>
-                        </variation>
                     </view>
                     <navigationItem key="navigationItem" title="메모 보기" id="wOh-VI-BFe">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="kqo-YX-8LB"/>
@@ -395,51 +390,57 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="hlR-TC-qeo" userLabel="KeyboardRegion">
+                                <rect key="frame" x="0.0" y="862" width="414" height="0.0"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" id="5tt-jI-bQC"/>
+                                </constraints>
+                            </view>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ePa-hO-BsB">
                                 <rect key="frame" x="0.0" y="140" width="414" height="722"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="00k-rq-zLa">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="794"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="722"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ogx-XH-Eyu">
-                                                <rect key="frame" x="49" y="305" width="333" height="34"/>
+                                                <rect key="frame" x="50.5" y="348.5" width="331.5" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                             </textField>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oVG-eA-y4U">
-                                                <rect key="frame" x="16" y="261.5" width="17" height="21"/>
+                                                <rect key="frame" x="16" y="305" width="18.5" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PW" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C5c-zB-kjh">
-                                                <rect key="frame" x="16" y="311.5" width="26.5" height="21"/>
+                                                <rect key="frame" x="16" y="355" width="26.5" height="21"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PhotoMemo" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q9y-bQ-UqI">
-                                                <rect key="frame" x="97" y="154" width="220" height="51"/>
+                                                <rect key="frame" x="97" y="197.5" width="220" height="51"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon" translatesAutoresizingMaskIntoConstraints="NO" id="tJt-57-SNo">
-                                                <rect key="frame" x="138" y="8" width="138" height="138"/>
+                                                <rect key="frame" x="138" y="51.5" width="138" height="138"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="tJt-57-SNo" secondAttribute="height" multiplier="1:1" id="zIL-dY-xbG"/>
                                                 </constraints>
                                             </imageView>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iOo-HP-0Rn">
-                                                <rect key="frame" x="65" y="355" width="38" height="30"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iOo-HP-0Rn">
+                                                <rect key="frame" x="66.5" y="398.5" width="38" height="30"/>
                                                 <state key="normal" title="Login"/>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aHO-q2-F2n">
-                                                <rect key="frame" x="309" y="355" width="57" height="30"/>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" reversesTitleShadowWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aHO-q2-F2n">
+                                                <rect key="frame" x="309" y="398.5" width="57" height="30"/>
                                                 <state key="normal" title="Register"/>
                                             </button>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bxW-W4-SYk">
-                                                <rect key="frame" x="49" y="255" width="333" height="34"/>
+                                                <rect key="frame" x="50.5" y="298.5" width="331.5" height="34"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
@@ -453,18 +454,22 @@
                                             <constraint firstItem="oVG-eA-y4U" firstAttribute="leading" secondItem="00k-rq-zLa" secondAttribute="leading" constant="16" id="8Vm-U4-pnv"/>
                                             <constraint firstItem="Q9y-bQ-UqI" firstAttribute="top" secondItem="tJt-57-SNo" secondAttribute="bottom" constant="8" id="8de-FA-MnH"/>
                                             <constraint firstItem="tJt-57-SNo" firstAttribute="centerX" secondItem="00k-rq-zLa" secondAttribute="centerX" id="9Ts-nO-Iqd"/>
+                                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="aHO-q2-F2n" secondAttribute="bottom" constant="30" id="9Wk-J9-dc4"/>
                                             <constraint firstItem="iOo-HP-0Rn" firstAttribute="leading" secondItem="ogx-XH-Eyu" secondAttribute="leading" constant="16" id="DUI-5K-Z0r"/>
                                             <constraint firstItem="bxW-W4-SYk" firstAttribute="top" secondItem="Q9y-bQ-UqI" secondAttribute="bottom" constant="50" id="GXq-hU-sQ4"/>
                                             <constraint firstItem="ogx-XH-Eyu" firstAttribute="leading" secondItem="bxW-W4-SYk" secondAttribute="leading" id="Mp2-fG-2l3"/>
                                             <constraint firstItem="ogx-XH-Eyu" firstAttribute="top" secondItem="bxW-W4-SYk" secondAttribute="bottom" constant="16" id="Nab-x3-k2V"/>
                                             <constraint firstItem="iOo-HP-0Rn" firstAttribute="top" secondItem="ogx-XH-Eyu" secondAttribute="bottom" constant="16" id="P5J-v4-1zS"/>
-                                            <constraint firstItem="tJt-57-SNo" firstAttribute="top" secondItem="00k-rq-zLa" secondAttribute="top" constant="8" id="QQP-9W-d5C"/>
                                             <constraint firstItem="oVG-eA-y4U" firstAttribute="centerY" secondItem="bxW-W4-SYk" secondAttribute="centerY" id="bsV-1z-z1e"/>
                                             <constraint firstItem="Q9y-bQ-UqI" firstAttribute="centerX" secondItem="00k-rq-zLa" secondAttribute="centerX" id="fjA-vL-lpr"/>
                                             <constraint firstItem="C5c-zB-kjh" firstAttribute="leading" secondItem="oVG-eA-y4U" secondAttribute="leading" id="gCR-LL-ZoR"/>
+                                            <constraint firstItem="ogx-XH-Eyu" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="C5c-zB-kjh" secondAttribute="trailing" constant="8" id="hcn-7P-m4b"/>
                                             <constraint firstItem="aHO-q2-F2n" firstAttribute="trailing" secondItem="ogx-XH-Eyu" secondAttribute="trailing" constant="-16" id="iOp-0p-aZA"/>
                                             <constraint firstItem="ogx-XH-Eyu" firstAttribute="trailing" secondItem="bxW-W4-SYk" secondAttribute="trailing" id="n5f-lO-ONC"/>
+                                            <constraint firstItem="aHO-q2-F2n" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="00k-rq-zLa" secondAttribute="leading" constant="8" id="o4u-DO-uZu"/>
+                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="iOo-HP-0Rn" secondAttribute="trailing" constant="8" id="oSV-jO-0td"/>
                                             <constraint firstItem="bxW-W4-SYk" firstAttribute="leading" secondItem="oVG-eA-y4U" secondAttribute="trailing" constant="16" id="vcD-uH-oTV"/>
+                                            <constraint firstItem="tJt-57-SNo" firstAttribute="centerY" secondItem="00k-rq-zLa" secondAttribute="centerY" multiplier="1/3" priority="750" id="ygT-Nu-6hl"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -473,6 +478,7 @@
                                     <constraint firstItem="00k-rq-zLa" firstAttribute="bottom" secondItem="pmW-5t-1mH" secondAttribute="bottom" id="5X7-J4-TWS"/>
                                     <constraint firstItem="00k-rq-zLa" firstAttribute="top" secondItem="pmW-5t-1mH" secondAttribute="top" id="Md5-SV-2OW"/>
                                     <constraint firstItem="00k-rq-zLa" firstAttribute="centerX" secondItem="ePa-hO-BsB" secondAttribute="centerX" id="bZV-Pk-KwZ"/>
+                                    <constraint firstItem="Tay-jI-KPv" firstAttribute="bottom" secondItem="00k-rq-zLa" secondAttribute="bottom" id="hBL-MU-1Dh"/>
                                     <constraint firstItem="00k-rq-zLa" firstAttribute="trailing" secondItem="pmW-5t-1mH" secondAttribute="trailing" id="vKB-nj-nq1"/>
                                 </constraints>
                                 <viewLayoutGuide key="contentLayoutGuide" id="pmW-5t-1mH"/>
@@ -492,14 +498,22 @@
                             <constraint firstAttribute="bottom" secondItem="LQo-Au-P12" secondAttribute="bottom" id="H90-9w-4ND"/>
                             <constraint firstItem="Inv-33-okm" firstAttribute="trailing" secondItem="LQo-Au-P12" secondAttribute="trailing" id="KUd-My-jBt"/>
                             <constraint firstItem="ePa-hO-BsB" firstAttribute="leading" secondItem="Inv-33-okm" secondAttribute="leading" id="MrG-Uh-fUA"/>
+                            <constraint firstItem="hlR-TC-qeo" firstAttribute="top" secondItem="ePa-hO-BsB" secondAttribute="bottom" id="OfM-Cg-eTf"/>
+                            <constraint firstItem="Inv-33-okm" firstAttribute="trailing" secondItem="hlR-TC-qeo" secondAttribute="trailing" id="QfU-Tl-7xW"/>
+                            <constraint firstItem="Inv-33-okm" firstAttribute="bottom" secondItem="hlR-TC-qeo" secondAttribute="bottom" id="bzZ-9f-Bd7"/>
                             <constraint firstItem="LQo-Au-P12" firstAttribute="top" secondItem="EdL-Mf-5RV" secondAttribute="top" id="e9N-7b-cRD"/>
-                            <constraint firstItem="Inv-33-okm" firstAttribute="bottom" secondItem="ePa-hO-BsB" secondAttribute="bottom" id="qa9-2m-z6a"/>
-                            <constraint firstItem="00k-rq-zLa" firstAttribute="height" secondItem="Tay-jI-KPv" secondAttribute="height" multiplier="1.1" id="sAs-Pd-MeF"/>
+                            <constraint firstItem="hlR-TC-qeo" firstAttribute="leading" secondItem="Inv-33-okm" secondAttribute="leading" id="lbL-X3-XwC"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="LQo-Au-P12"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="pj1-5P-hkx"/>
                     <connections>
                         <outlet property="idTextField" destination="bxW-W4-SYk" id="0iG-Zt-et2"/>
+                        <outlet property="keyboardRegionHeight" destination="5tt-jI-bQC" id="D7e-Nu-hQV"/>
                         <outlet property="loadingIndicator" destination="LQo-Au-P12" id="H9N-p2-jnD"/>
                         <outlet property="loginButton" destination="iOo-HP-0Rn" id="BFE-hh-WPl"/>
                         <outlet property="passwordTextField" destination="ogx-XH-Eyu" id="uKx-KX-81V"/>
